--- a/data/compose.yaml
+++ b/data/compose.yaml
@@ -1,5 +1,5 @@
 x-redash-service: &redash-service
-  image: redash/redash:__TAG__
+  image: ghostmxs/redash:__TAG__
   depends_on:
     - postgres
     - redis
